word wrap for long links pulled from twitter. fix right-hand excess whitespace. [closes #62]

--- a/less/app-chat.less
+++ b/less/app-chat.less
@@ -31,6 +31,7 @@ live-chat { clear: both; }
 }
 
 .chat-body {
+    word-wrap: break-word;
 
     margin-right: 22px;
 
